# fda-sbom-generator

./: .coverage  CHANGELOG.md  FIXES_APPLIED.md  LICENSE  README.md  analyze_specific_fixes.py  debug_js_scanner.py  detailed_diagnosis.py  direct_test_debug.py  fix_test_failures.py  get_error_details.py  get_final_errors.py  pyproject.toml  quick_test_status.py  run_comprehensive_tests.py  run_specific_tests.py  simple_component_test.py  test_base_scanner_fix.py  test_basic_functionality.py  test_fixes.py  test_fixture_discovery.py  test_imports.py  test_remaining_fixes.py  verify_fixes.py
.github/workflows/: ci.yml
docs/: DOCUMENTATION_UPDATE_SUMMARY.md  installation.md  quick-start.md  troubleshooting.md
examples/: dotnet-support.md  multi-project-solutions.md  web-ui-guide.md
src/fda_sbom/: __init__.py  cli.py  dotnet_scanner.py.bak  exporters.py  generator.py  models.py  scanners.py  solution.py  vulnerability.py
src/fda_sbom/ui/: __init__.py  app.py
src/fda_sbom/ui/templates/: base.html  doctor.html  generate.html  index.html  scan.html  solution.html  validate.html
src/fda_sbom_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_basic.py
tests/compliance/: __init__.py  test_fda_requirements.py
tests/fixtures/: conftest.py
tests/integration/: test_end_to_end.py
tests/performance/: test_performance.py
tests/unit/: test_exporters.py  test_generator.py  test_models.py  test_scanners.py  test_solution.py  test_vulnerability.py
