[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fda-sbom-generator"
version = "0.1.1"
description = "FDA-compliant Software Bill of Materials (SBOM) generator"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]
keywords = ["sbom", "fda", "security", "compliance", "medical-device"]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "packaging>=21.0",
    "requests>=2.28",
    "lxml>=4.9",
    "PyYAML>=6.0",
    "cyclonedx-python-lib>=3.0",
    "spdx-tools>=0.7",
    "pip-audit>=2.0",
    "safety>=2.0",
    "toml>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pre-commit>=2.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]
ui = [
    "flask>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fda-sbom-generator"
Repository = "https://github.com/yourusername/fda-sbom-generator"
Documentation = "https://fda-sbom-generator.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/fda-sbom-generator/issues"

[project.scripts]
fda-sbom = "fda_sbom.cli:main"
fda-sbom-ui = "fda_sbom.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fda_sbom = ["templates/*", "schemas/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=fda_sbom --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/fda_sbom"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
